# AiogramListView

./: .gitignore  bot.py  bot_utils.py  listview.py  listview_storage.py  pyproject.toml
aiogram_listview/: __init__.py  listview.py  listview_aiogram.py  listview_controller.py  listview_middleware.py  listview_storage.py
examples/: bot.py  bot_utils.py
src/aiogram_listview/: __init__.py  listview.py  listview_storage.py
