[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiogram-listview"
version = "0.0.3"
authors = [
  { name="JustKovalchuk" },
]
description = "ListView for Aiogram 3"
requires-python = ">=3.8"
dependencies = [
    "aiogram>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/JustKovalchuk/AiogramListView"